src/test/deca/codegen/valid/created/testClass/assignAtt.deca
class MyClass {
    int x;
    float y;

    void printValues() {
        println(x);
        println(y);
    }
}

{
    MyClass obj = new MyClass();
    obj.x = 42;
    obj.y = 3.14;
    obj.printValues();
}