src/test/deca/codegen/invalid/created/testClass/dereferencementNullField.deca
// Description:
//    dereferencementnull
//
// Resultats:
//


class alpha {
    int entier;
}

class sigma {
    float s = 3.15;

    alpha objectoo;
}

{
    sigma obj=new sigma() ;
    print(obj.objectoo.entier);
}